Git 1.1.x
------------------------------------------------------------------------------------------------------------------------

BACKEND
	Fixed: Fcgi wrapper is not created in some contexts ( apache_fcgid )
	Fixed: Pool configuration file is not created in some contexts ( apache_php_fpm )

GUI
	Fixed: CSS loading order
	Replaced: i-MSCP jQuery tooltip plugin by jQuery UI tooltip widget

VENDOR
	Added: pGenerator jQuery plugin v1.0.0

TICKETS
	Fixed #1187: Enhancement - Password generator for any password field
	Fixed #1188: Bug - apache_fcgid - Fcgid wrapper not created in some context

------------------------------------------------------------------------------------------------------------------------
1.1.18
------------------------------------------------------------------------------------------------------------------------

2014-11-22: Laurent Declercq
	RELEASE i-MSCP 1.1.18

ENGINE
	Fixed: Unable to remove the domain aliases and the subdomains ( Web folder protection )

GUI
	Added: iMSCP_Events_Aggregator::getEventManager() method
	Changed: Configuration objects are now cached for better performances
	Changed: Mail body footprints are now stored in flat file instead of database ( Exception mail writer )
	Changed: Mails are now sent every 24 hours in context of an identical exception ( Exception mail writer )
	Changed: Writers are now lazy-loaded ( Exception writers )
	Fixed: Ignore orphaned admin entries ( customer ) in generate_reseller_user_props() function
	Fixed: The MAIL_WRITER_EXPIRY_TIME configuration parameter is not honored ( Exception mail writer )
	Fixed: Undefined sSearch index in admin_log.php
	Fixed: Useless initialization routines in context of the AJAX requests ( Initializer )
	Fixed: Wrong routine initialization order ( Intializer )
	Improved: Fallback template ( Exception browser writer )
	Removed MAIL_BODY_FOOTPRINTS and MAIL_WRITER_EXPIRY_TIME configuration parameters ( Exception mail writer )